# cakemail-api-documentation-mcp

./: .claude.json  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  PROJECT_COMPLETE.md  PUBLISHING.md  PUBLISHING_NPM.md  README.md  package.json  pyproject.toml
docs/: architecture.md  prd.md
src/cakemail_mcp/: __init__.py  __main__.py  config.py  server.py
