[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cakemail-mcp-server"
version = "0.1.0"
description = "MCP server exposing Cakemail API documentation to AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Cakemail", email = "support@cakemail.com"}
]
keywords = ["mcp", "model-context-protocol", "cakemail", "api", "openapi", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "twine>=5.0.0",
]

[project.scripts]
cakemail-mcp-server = "cakemail_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/cakemail/cakemail-mcp-server"
Documentation = "https://github.com/cakemail/cakemail-mcp-server#readme"
Repository = "https://github.com/cakemail/cakemail-mcp-server"
Issues = "https://github.com/cakemail/cakemail-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cakemail_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=cakemail_mcp --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
